Fix file input and navbar overlap bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,7 @@
   padding-top: .5rem;
   padding-bottom: .5rem;
   background-color:#CC0000;
+  z-index: 1;
 }
 
 
